--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -1,7 +1,6 @@
 {
   "name": "proyecto-dispositivo-de-asistencia-domestica",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -23,5 +22,6 @@
     "play-sound": "^1.1.6",
     "serialport": "^13.0.0",
     "soquetic": "^1.4.2"
-  }
+  },
+  "description": ""
 }
