--- a/BackEnd/tareas.json
+++ b/BackEnd/tareas.json
@@ -6,5 +6,9 @@
   {
     "tarea": "Hacer la cama",
     "realizada": false
+  },
+  {
+    "tarea": "dwxskkcjasdjb · 01/01/2026 · 09:36",
+    "realizada": true
   }
 ]
