--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "liveServer.settings.port": 5501
+    "liveServer.settings.wait": 500,
+    "liveServer.settings.ignoreFiles": ["**/*.json"]
 }
