--- a/BackEnd/tareas.json
+++ b/BackEnd/tareas.json
@@ -1,14 +1,14 @@
 [
   {
-    "tarea": "Hacer la cama",
+    "tarea": "Visita de los  nietos · Mañana · 15:54",
     "realizada": true
   },
   {
-    "tarea": "Hacer la cama",
-    "realizada": false
+    "tarea": "visita de los nietos · Mañana · 12:18",
+    "realizada": true
   },
   {
-    "tarea": "dwxskkcjasdjb · 01/01/2026 · 09:36",
+    "tarea": "call your daughter · Mañana · 15:29",
     "realizada": true
   }
 ]
